use-cases/argo-rollouts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: asm-usecase
  labels:
    app: hello-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: hello-service
